# chatclient

./: .gitignore  CMakeLists.txt  adduseritem.h  applyfriend.cpp  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.ui  applyfriendpage.cpp  applyfriendpage.ui  authenfriend.cpp  authenfriend.ui  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  clickedbtn.cpp  clickedbtn.h  clickedlabel.cpp  clickedlabel.h  clickedoncelabel.cpp  clickedoncelabel.h  contactuserlist.cpp  contactuserlist.h  conuseritem.cpp  conuseritem.ui  customizeedit.h  findfaildlg.cpp  findfaildlg.h  findfaildlg.ui  (+38 more)
